--- a/RadzenBlazorDemos.Server/Pages/_Host.cshtml
+++ b/RadzenBlazorDemos.Server/Pages/_Host.cshtml
@@ -36,6 +36,7 @@
     </style>
     <link rel="stylesheet" href="_content/Radzen.Blazor/css/material-base.css" />
     <component type="typeof(RadzenBlazorDemos.Shared.Theme)" render-mode="Static" />
+    <link rel="stylesheet" data-name="vs/editor/editor.main" href="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.34.1/min/vs/editor/editor.main.min.css">
 </head>
 <body>
     <component type="typeof(RadzenBlazorDemos.App)" render-mode="ServerPrerendered" />
@@ -53,5 +54,18 @@
     <script src="_framework/blazor.server.js"></script>
     <script async src="js/highlight.pack.js"></script>
     <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
+    <script>var require = { paths: { 'vs': 'https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.34.1/min/vs' } }</script>
+    <script async src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.34.1/min/vs/loader.min.js"></script>
+    <script async src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.34.1/min/vs/editor/editor.main.nls.js"></script>
+    <script async src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.34.1/min/vs/editor/editor.main.js"></script>
+    <script>
+        function createEditor(element, ref, options) {
+            var instance = monaco.editor.create(element, options);
+            instance.onDidChangeModelContent = function () {
+                ref.invokeMethodAsync('OnChangeAsync', instance.getValue());
+            };
+            return instance;
+        }
+    </script>
 </body>
 </html>
