Updated Pasword component to handle style changes

--- a/RadzenBlazorDemos/Pages/PasswordPage.razor
+++ b/RadzenBlazorDemos/Pages/PasswordPage.razor
@@ -21,10 +21,22 @@
                 <RadzenPassword Disabled="true" Placeholder="Enter password..." Class="w-100" />
             </RadzenCard>
         </div>
-            <div class="col-md-4 p-3">
+        <div class="col-md-4 p-3">
             <RadzenCard>
-                <RadzenText TextStyle="TextStyle.Subtitle2" TagName="TagName.H3">Password with Allow Password Reveal</RadzenText>
-                <RadzenPassword AllowPasswordReveal="true" Placeholder="Enter password..." Class="w-100" />
+                <RadzenText TextStyle="TextStyle.Subtitle2" TagName="TagName.H3">Password with Show Password Reveal</RadzenText>
+                    <RadzenPassword ShowPasswordReveal="true" Placeholder="Enter password..." Change=@(args => OnChange(args, "Password Allow Password Reveal")) class="w-100" />
+            </RadzenCard>
+        </div>
+        <div class="col-md-4 p-3">
+            <RadzenCard>
+                <RadzenText TextStyle="TextStyle.Subtitle2" TagName="TagName.H3">Disabled Password with Show Password Reveal</RadzenText>
+                <RadzenPassword ShowPasswordReveal="true" Class="w-100" Disabled="true" Value="Radzen" />
+            </RadzenCard>
+        </div>
+        <div class="col-md-4 p-3">
+            <RadzenCard>
+                <RadzenText TextStyle="TextStyle.Subtitle2" TagName="TagName.H3">Disabled Password with Allow Reveal When Disabled</RadzenText>
+                    <RadzenPassword ShowPasswordReveal="true" AllowRevealWhenDisabled="true" Class="w-100" Disabled="true" Value="Radzen" />
             </RadzenCard>
         </div>
     </div>
